With user verification

--- a/HrAssist-HRAssist/HRassist/package.json
+++ b/HrAssist-HRAssist/HRassist/package.json
@@ -10,7 +10,9 @@
     "cloud_storage": "node cloud.js",
     "firestore_storage": "node firestore.js",
     "firestore_add": "node add_firestore.js",
-    "firestore_retrieve": "node retrieve_firestore.js"
+    "firestore_retrieve": "node retrieve_firestore.js",
+    "page_verification": "node page_restriction.js",
+    "login_authentication": "node login_auth.js"
   },
   "keywords": [],
   "author": "",
