--- a/HrAssist-HRAssist/HRassist/package.json
+++ b/HrAssist-HRAssist/HRassist/package.json
@@ -8,7 +8,7 @@
     "build": "webpack",
     "auth": "node auth.js",
     "cloud_storage": "node cloud.js",
-    "firestore_storage": "node firestore.js", 
+    "firestore_storage": "node firestore.js",
     "firestore_add": "node add_firestore.js",
     "firestore_retrieve": "node retrieve_firestore.js",
     "page_verification": "node page_restriction.js",
@@ -26,6 +26,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "firebase": "^10.5.2"
+    "firebase": "^10.5.2",
+    "sweetalert2": "^11.6.13"
   }
 }
