--- a/HrAssist-HRAssist/HRassist/package.json
+++ b/HrAssist-HRAssist/HRassist/package.json
@@ -23,7 +23,8 @@
     "job_registry": "node job_registry.js",
     "employee_interface": "node employee_interface.js",
     "employee_signin": "node employee_signin.js",
-    "employee_appointment": "node employee_appointment.js"
+    "employee_appointment": "node employee_appointment.js",
+    "file201": "node 201file.js"
   },
   "keywords": [],
   "author": "",
