--- a/HrAssist-HRAssist/HRassist/package.json
+++ b/HrAssist-HRAssist/HRassist/package.json
@@ -24,7 +24,8 @@
     "employee_interface": "node employee_interface.js",
     "employee_signin": "node employee_signin.js",
     "employee_appointment": "node employee_appointment.js",
-    "file201": "node 201file.js"
+    "file201": "node 201file.js",
+    "fetch_employee_info": "node fetch_employee_info.js"
   },
   "keywords": [],
   "author": "",
