--- a/HrAssist-HRAssist/HRassist/package.json
+++ b/HrAssist-HRAssist/HRassist/package.json
@@ -25,7 +25,9 @@
     "employee_signin": "node employee_signin.js",
     "employee_appointment": "node employee_appointment.js",
     "file201": "node 201file.js",
-    "fetch_employee_info": "node fetch_employee_info.js"
+    "fetch_employee_info": "node fetch_employee_info.js",
+    "employee_attachments": "node employee_attachments.js",
+    "employee_leavecredit": "node employee_leavecredit.js"
   },
   "keywords": [],
   "author": "",
