--- a/HrAssist-HRAssist/HRassist/package.json
+++ b/HrAssist-HRAssist/HRassist/package.json
@@ -33,7 +33,9 @@
     "employee_leave_form": "node employee_leave_form.js",
     "employee_pass_slip": "node employee_pass_slip.js",
     "account_status": "node account_status.js",
-    "dtr": "node dtr.js"
+    "dtr": "node dtr.js",
+    "office": "node office.js",
+    "organizational_chart": "node organizational_chart.js"
   },
   "keywords": [],
   "author": "",
