--- a/HrAssist-HRAssist/HRassist/package.json
+++ b/HrAssist-HRAssist/HRassist/package.json
@@ -38,7 +38,8 @@
     "organizational_chart": "node organizational_chart.js",
     "manage_employee": "node manage_employee.js",
     "rewards": "node rewards.js",
-    "applicant_status": "node applicant_status.js"
+    "applicant_status": "node applicant_status.js",
+    "leave_management": "node leave_management.js"
   },
   "keywords": [],
   "author": "",
