--- a/HrAssist-HRAssist/HRassist/package.json
+++ b/HrAssist-HRAssist/HRassist/package.json
@@ -37,7 +37,7 @@
     "office": "node office.js",
     "organizational_chart": "node organizational_chart.js",
     "manage_employee": "node manage_employee.js",
-    "rewards": "node rewards.js",
+    "Rewards": "node Rewards.js",
     "applicant_status": "node applicant_status.js",
     "leave_management": "node leave_management.js",
     "ipcrf": "node ipcrf.js",
