--- a/HrAssist-HRAssist/HRassist/package.json
+++ b/HrAssist-HRAssist/HRassist/package.json
@@ -53,7 +53,8 @@
     "training": "node training.js",
     "training_memo": "node training_memo.js",
     "training_list": "node training_list.js",
-    "retrieve_leave": "node retrieve_leave.js"
+    "retrieve_leave": "node retrieve_leave.js",
+    "retrieve_behavior": "node retrieve_behavior.js"
   },
   "keywords": [],
   "author": "",
