--- a/HrAssist-HRAssist/HRassist/package.json
+++ b/HrAssist-HRAssist/HRassist/package.json
@@ -64,7 +64,8 @@
     "individual_opcrf": "node individual_opcrf.js",
     "dtr_summary": "node dtr_summary.js",
     "save_dtr_summary": "node save_dtr_summary.js",
-    "employee_reward": "node employee_reward.js"
+    "employee_reward": "node employee_reward.js",
+    "locator_slip_request": "node locator_slip_request.js"
   },
   "keywords": [],
   "author": "",
