--- a/HrAssist-HRAssist/HRassist/package.json
+++ b/HrAssist-HRAssist/HRassist/package.json
@@ -70,7 +70,8 @@
     "employee_request_section": "node employee_request_section.js",
     "employee_total_leavecredits": "node employee_total_leavecredits.js",
     "contacts": "node contacts.js",
-    "admin_add_applicant": "node admin_add_applicant.js"
+    "admin_add_applicant": "node admin_add_applicant.js",
+    "applicant_submit": "node applicant_submit.js"
   },
   "keywords": [],
   "author": "",
