--- a/HrAssist-HRAssist/HRassist/package.json
+++ b/HrAssist-HRAssist/HRassist/package.json
@@ -71,7 +71,8 @@
     "employee_total_leavecredits": "node employee_total_leavecredits.js",
     "contacts": "node contacts.js",
     "admin_add_applicant": "node admin_add_applicant.js",
-    "applicant_submit": "node applicant_submit.js"
+    "applicant_submit": "node applicant_submit.js",
+    "employee_concerns": "node employee_concerns.js"
   },
   "keywords": [],
   "author": "",
